add section graphical visualizations and edit bootstrap file for better visualization of summary table

--- a/www/bootstrap.css
+++ b/www/bootstrap.css
@@ -8,6 +8,10 @@ body {
   font-family: "Century";
 }
 
+table {
+  background: #DAA520;
+  opacity:0.6;
+}
 
 h3 {
   font-family: "Matura MT Script Capitals";
